--- a/View/Customer/EditCustomerView.xaml
+++ b/View/Customer/EditCustomerView.xaml
@@ -1,13 +1,124 @@
 ﻿<Window x:Class="PrototypeEDUCOM.View.Customer.EditCustomerView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="EditCustomerView" Height="300" Width="300">
+        Title="EditCustomerView" Height="538" Width="471">
     <Grid>
-        <Label Content="Prénom" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="68,94,0,0"/>
-        <Label Content="Nom" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="83,128,0,0"/>
-        <Button Command="{Binding cmdEdit}" Content="Modifier" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="75" Margin="0,0,0,10"/>
-        <TextBox Text="{Binding firstName}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="125,94,0,0"/>
-        <TextBox Text="{Binding lastName}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="125,131,0,0"/>
-        <Label Content="Modifier un client" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="130*"/>
+            <ColumnDefinition Width="323*"/>
+        </Grid.ColumnDefinitions>
+
+        <!-- Header -->
+        <Label Content="Modifier un client" HorizontalAlignment="Left" Margin="66,14,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="18" Grid.ColumnSpan="2" Foreground="White" Width="172" />
+        <Rectangle Fill="#FF30859A" HorizontalAlignment="Left" Height="65" Stroke="White" VerticalAlignment="Top" Width="464" Grid.ColumnSpan="2" Panel.ZIndex="-1"/>
+        <Image  Source="../../Ressource/titleAddClient.png" Margin="16,12,77,456" Width="40" Height="40" Panel.ZIndex="23"/>
+
+        <!-- Champ Prénom-->
+        <Label Content="Prénom" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="40,120,0,0"/>
+        <TextBox Text="{Binding firstname}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="97,120,0,0" Grid.ColumnSpan="2">
+            <TextBox.Style>
+                <Style TargetType="{x:Type TextBox}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding validFirstname.valid}" Value="false">
+                            <Setter Property="BorderBrush" Value="Red"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBox.Style>
+        </TextBox>
+        <TextBlock HorizontalAlignment="Left" Margin="99,143,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.172,0.223" Grid.ColumnSpan="2">
+            <TextBlock.Style>
+                <Style TargetType="{x:Type TextBlock}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding validFirstname}" Value="{x:Null}">
+                            <Setter Property="Text" Value="Champ obligatoire"/>
+                            <Setter Property="Foreground" Value="Gray"/>
+                            <Setter Property="FontStyle" Value="Italic"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding validFirstname.valid}" Value="false">
+                            <Setter Property="Text" Value="{Binding validFirstname.message}"/>
+                            <Setter Property="Foreground" Value="Red"/>
+                            <Setter Property="FontWeight" Value="Bold"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding validFirstname.valid}" Value="true">
+                            <Setter Property="Text" Value="{Binding validFirstname.message}"/>
+                            <Setter Property="Foreground" Value="Green"/>
+                            <Setter Property="FontWeight" Value="Bold"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
+        </TextBlock>
+
+        <!-- Champ nom -->
+        <Label Content="Nom" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="114.223,117,0,0" Grid.Column="1"/>
+        <TextBox Text="{Binding lastname}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="156.223,120,0,0" Grid.Column="1">
+            <TextBox.Style>
+                <Style TargetType="{x:Type TextBox}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding validLastname.valid}" Value="false">
+                            <Setter Property="BorderBrush" Value="Red"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBox.Style>
+        </TextBox>
+        <TextBlock HorizontalAlignment="Left" Margin="156.223,143,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.172,0.223" Grid.Column="1">
+            <TextBlock.Style>
+                <Style TargetType="{x:Type TextBlock}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding validLastname}" Value="{x:Null}">
+                            <Setter Property="Text" Value="Champ obligatoire"/>
+                            <Setter Property="Foreground" Value="Gray"/>
+                            <Setter Property="FontStyle" Value="Italic"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding validLastname.valid}" Value="false">
+                            <Setter Property="Text" Value="{Binding validLastname.message}"/>
+                            <Setter Property="Foreground" Value="Red"/>
+                            <Setter Property="FontWeight" Value="Bold"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding validLastname.valid}" Value="true">
+                            <Setter Property="Text" Value="{Binding validLastname.message}"/>
+                            <Setter Property="Foreground" Value="Green"/>
+                            <Setter Property="FontWeight" Value="Bold"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
+        </TextBlock>
+        
+        <Label Content="Rue" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,211,0,0"/>
+        <Label Content="Ville" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="56,245,0,0"/>
+        <TextBox Text="{Binding street}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="98,211,0,0" Grid.ColumnSpan="2"/>
+        <TextBox Text="{Binding city}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="98,248,0,0" Grid.ColumnSpan="2"/>
+        <Label Content="NPA" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="113.223,211,0,0" Grid.Column="1"/>
+        <Label Content="Pays" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="113.223,245,0,0" Grid.Column="1"/>
+        <TextBox Text="{Binding zip}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="157.223,211,0,0" Grid.Column="1"/>
+        <TextBox Text="{Binding country}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="157.223,248,0,0" Grid.Column="1"/>
+        <Label Content="Civilité" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="44,80,0,0"/>
+        <RadioButton GroupName="civility" Content="M." HorizontalAlignment="Left" Margin="109,85,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <RadioButton GroupName="civility" Content="Mme." HorizontalAlignment="Left" Margin="30.223,85,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label Content="Adresse" HorizontalAlignment="Left" Margin="11,170,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+        <Label Content="Tél. privé" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="29,338,0,0"/>
+        <TextBox Text="{Binding phonePrivate}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="98,338,0,0" Grid.ColumnSpan="2"/>
+        <Label Content="Email" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="110.223,338,0,0" Grid.Column="1"/>
+        <TextBox Text="{Binding email}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="157.223,338,0,0" Grid.Column="1"/>
+        <Label Content="Contact" HorizontalAlignment="Left" Margin="11,297,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+        <Label Content="Tél. pro" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="29,374,0,0"/>
+        <TextBox Text="{Binding phonePro}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="98,374,0,0" Grid.ColumnSpan="2"/>
+
+        <!-- Button submit -->
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdEdit}" Margin="63,422,163,50" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Column="1">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="../../Ressource/add.png" Width="30" Height="30" />
+                <TextBlock Text="Modifier" VerticalAlignment="Center" FontWeight="Bold" />
+            </StackPanel>
+        </Button>
+
+        <!-- Footer -->
+        <Rectangle Fill="#FF30859A" HorizontalAlignment="Left" Height="25" Margin="0,484,0,-1" Stroke="White" VerticalAlignment="Top" Width="424" Grid.ColumnSpan="2" Panel.ZIndex="-1"/>
+        <Image Source="../../Ressource/logoSmall.png" HorizontalAlignment="Left" Height="34" Margin="293,473,0,0" VerticalAlignment="Top" Width="34" Grid.Column="1" Panel.ZIndex="55"/>
+        <Rectangle Grid.Column="1" HorizontalAlignment="Left" Height="40" Margin="289,468,0,0" Stroke="#FF30859A" VerticalAlignment="Top" Width="41"/>
+        <TextBlock Text="EDUCOM Manager © Wavemind, 2014" Grid.Column="1" HorizontalAlignment="Left" Margin="111,490,0,0" VerticalAlignment="Top" Width="173" FontSize="10" FontStyle="Italic" Foreground="#FFBACFD4"/>
     </Grid>
 </Window>
