--- a/View/Customer/AddStudentView.xaml
+++ b/View/Customer/AddStudentView.xaml
@@ -29,20 +29,11 @@
             <Label Content="Prénom" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0" Grid.Row="2"/>
             <Label Content="Parenté" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0" Grid.Row="3"/>
             <Label Content="Date de naissance" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0" Grid.Row="4"/>
-
-
-            <StackPanel Orientation="Horizontal"  Grid.Column="1" Grid.Row="0">
-                <RadioButton GroupName="kinship" Content="Homme" VerticalAlignment="Center" Margin="10,0,10,0"/>
-                <RadioButton GroupName="kinship" Content="Femme" VerticalAlignment="Center" Margin="0,0,10,0"/>
-            </StackPanel>
-            <TextBox Text="{Binding firstname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,2,10,2" Grid.Row="2" Grid.Column="1" />
+            <ComboBox SelectedIndex="{Binding genderIndex}" ItemsSource="{Binding genders}" Grid.Row="0" Grid.Column="1" Margin="10,2,10,2" />
             <TextBox Text="{Binding lastname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,2,10,2" Grid.Row="1" Grid.Column="1" />
-            <ComboBox SelectedIndex="{Binding kinshipIndex}" ItemsSource="{Binding kinships}" Grid.Row="3" Grid.Column="1" Margin="10,2,10,2" >
-                <ComboBoxItem Tag="father">Père</ComboBoxItem>
-                <ComboBoxItem Tag="mother">Mère</ComboBoxItem>
-                <ComboBoxItem Tag="uncle">Oncle</ComboBoxItem>
-            </ComboBox>
-            <DatePicker HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,2,10,2" Grid.Column="1" Grid.Row="4"/>
+            <TextBox Text="{Binding firstname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,2,10,2" Grid.Row="2" Grid.Column="1" />
+            <ComboBox SelectedIndex="{Binding kinshipIndex}" ItemsSource="{Binding kinships}" Grid.Row="3" Grid.Column="1" Margin="10,2,10,2" />
+            <DatePicker SelectedDate="{Binding birthday}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,2,10,2" Grid.Column="1" Grid.Row="4"/>
         </Grid>
 
         <Button Content="Ajouter" Command="{Binding cmdAdd}"  HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="3"/>
