--- a/View/Customer/EditStudentView.xaml
+++ b/View/Customer/EditStudentView.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Customer.AddStudentView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Customer.EditStudentView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="AddStudentView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+        Title="EditStudentView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -12,7 +12,7 @@
         <Rectangle Fill="#FF30859A" HorizontalAlignment="Left" Height="55" Stroke="White" VerticalAlignment="Top" Panel.ZIndex="-1"/>
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#FF30859A" >
             <Image  Source="../../Ressource/titleAddStudent.png" Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
-            <Label Content="Ajouter un étudiant" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
+            <Label Content="Modifier un étudiant" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
         </StackPanel>
 
 
@@ -132,10 +132,10 @@
                 <Image Source="/PrototypeEDUCOM;component/Ressource/logoSmall.png" Height="34" VerticalAlignment="Top" Width="34" Panel.ZIndex="55"/>
             </Border>
         </Grid>
-        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}"  Width="92" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
-            <StackPanel Orientation="Horizontal" Width="76">
-                <Image Source="../../Ressource/add.png" Width="30" Height="30" />
-                <TextBlock Text="Ajouter" VerticalAlignment="Center" FontWeight="Bold" />
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="../../Ressource/edit.png" Width="30" Height="30" />
+                <TextBlock Text="Modifier" Margin="10,0" VerticalAlignment="Center" FontWeight="Bold" />
             </StackPanel>
         </Button>
     </Grid>
