--- a/View/LoginView.xaml
+++ b/View/LoginView.xaml
@@ -2,12 +2,17 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:control="clr-namespace:LoadingControl.Control"
-        Title="Connexion EDUCCOM Manager" Height="350" Width="318" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Connexion EDUCCOM Manager" SizeToContent="Height" Width="318" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="160" />
+            <RowDefinition />
+            <RowDefinition Height="90" />
+        </Grid.RowDefinitions>
 
-        <Image Source="../Ressource/logo.png" HorizontalAlignment="Left" Height="100" Margin="20,23,0,0" VerticalAlignment="Top" Width="272"/>
+        <Image Source="../Ressource/logo.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="100" Width="272" Grid.Row="0"/>
 
-        <Grid>
+        <Grid Grid.Row="1">
             <Grid.Style>
                 <Style TargetType="{x:Type Grid}">
                     <Style.Triggers>
@@ -17,21 +22,25 @@
                     </Style.Triggers>
                 </Style>
             </Grid.Style>
+            <Label Content="{Binding message}" HorizontalAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" Foreground="#FFE63333" Height="33" Width="161" />
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition Width="4*" />
+                </Grid.ColumnDefinitions>
 
-            <!-- Button submit -->
-            <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding btnLogin}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Column="0" Margin="104,269,93,17" Width="115" >
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="../Ressource/login.png" Width="30" Height="30" />
-                    <TextBlock Text="  Connexion" VerticalAlignment="Center" FontWeight="Bold" />
-                </StackPanel>
-            </Button>
-            <TextBox HorizontalAlignment="Left" Text="{Binding login, Mode=OneWayToSource}" Height="23" Margin="108,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-            <TextBox HorizontalAlignment="Left" Text="{Binding pass, Mode=OneWayToSource}" Height="23" Margin="108,220,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-            <Label Name="login" Content="Login" HorizontalAlignment="Left" Margin="61,178,0,0" VerticalAlignment="Top"/>
-            <Label Content="Pass" HorizontalAlignment="Left" Margin="67,220,0,0" VerticalAlignment="Top"/>
-            <Label Content="{Binding message}" HorizontalAlignment="Left" Margin="67,128,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="#FFE63333" Height="33" Width="161"/>
+                <Label Content="Login" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="0" Margin="0,6,0,6" />
+                <Label Content="Pass" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="0" Margin="0,6,0,6"/>
+
+                <TextBox Text="{Binding login, Mode=OneWayToSource}" TextWrapping="Wrap" Grid.Row="0" Grid.Column="1"  Margin="10,8,60,8" />
+                <TextBox Text="{Binding pass, Mode=OneWayToSource}"  TextWrapping="Wrap" Grid.Row="1" Grid.Column="1" Margin="10,8,60,8" />
+            </Grid>
         </Grid>
-        <Grid>
+        <Grid Grid.Row="1">
             <Grid.Style>
                 <Style TargetType="{x:Type Grid}">
                     <Style.Triggers>
@@ -41,7 +50,16 @@
                     </Style.Triggers>
                 </Style>
             </Grid.Style>
-            <control:LoadingAnimation HorizontalAlignment="Center" VerticalAlignment="Center" Margin="112,171,112,63"/>
+            <control:LoadingAnimation HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Grid>
+
+        <!-- Button submit -->
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding btnLogin}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2"  >
+            <StackPanel Orientation="Horizontal">
+                <Image Source="../Ressource/login.png" Width="30" Height="30" />
+                <TextBlock Text="  Connexion" VerticalAlignment="Center" FontWeight="Bold" />
+            </StackPanel>
+        </Button>
+
     </Grid>
 </Window>
