--- a/View/MainView.xaml
+++ b/View/MainView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:PrototypeEDUCOM.View"
-        Title="EDUCOM Manager" Height="700" Width="1000">
+        Title="EDUCOM Manager" Height="700" Width="1000" WindowStartupLocation="CenterScreen">
     <Grid>
         <TabControl Margin="10,113,10,10" ItemsSource="{Binding tabs}">
 
