--- a/View/Customer/AddStudentView.xaml
+++ b/View/Customer/AddStudentView.xaml
@@ -4,17 +4,15 @@
         Title="AddStudentView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="55" />
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="70"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Rectangle Fill="#FF30859A" HorizontalAlignment="Left" Height="55" Stroke="White" VerticalAlignment="Top" Panel.ZIndex="-1"/>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#FF30859A" >
+         <StackPanel Grid.Row="0" Orientation="Horizontal"  Background="#FF30859A" >
             <Image  Source="../../Ressource/titleAddStudent.png" Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
             <Label Content="Ajouter un étudiant" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
         </StackPanel>
-
 
 
         <Grid Grid.Row="1">
@@ -30,43 +28,16 @@
                 <ColumnDefinition Width="4*"/>
             </Grid.ColumnDefinitions>
 
-            <Label Content="Sex" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="0" />
-            <Label Content="Nom" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="1"/>
-            <Label Content="Prénom" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="2"/>
-            <Label Content="Parenté" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="3"/>
-            <Label Content="Date de naissance" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="4"/>
+            <Label Content="Sex" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="0" />
+            <Label Content="Nom" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="1"/>
+            <Label Content="Prénom" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="2"/>
+            <Label Content="Parenté" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="3"/>
+            <Label Content="Date de naissance" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="4"/>
 
             <ComboBox SelectedIndex="{Binding genderIndex}" ItemsSource="{Binding genders}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
 
-            <StackPanel Grid.Row="2" Grid.Column="1">
-                <TextBox Text="{Binding firstname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="2" Grid.Column="1" />
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
-                    <TextBlock.Style>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding validFirstname}" Value="{x:Null}">
-                                    <Setter Property="Text" Value="Champ obligatoire"/>
-                                    <Setter Property="Foreground" Value="Gray"/>
-                                    <Setter Property="FontStyle" Value="Italic"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding validFirstname.valid}" Value="false">
-                                    <Setter Property="Text" Value="{Binding validFirstname.message}"/>
-                                    <Setter Property="Foreground" Value="Red"/>
-                                    <Setter Property="FontWeight" Value="Bold"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding validFirstname.valid}" Value="true">
-                                    <Setter Property="Text" Value="{Binding validFirstname.message}"/>
-                                    <Setter Property="Foreground" Value="Green"/>
-                                    <Setter Property="FontWeight" Value="Bold"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-            </StackPanel>
-
             <StackPanel Grid.Row="1" Grid.Column="1">
-                <TextBox Text="{Binding lastname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="1" Grid.Column="1" />
+                <TextBox Text="{Binding lastname, Mode=OneWayToSource}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2"/>
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
@@ -83,6 +54,33 @@
                                 </DataTrigger>
                                 <DataTrigger Binding="{Binding validLastname.valid}" Value="true">
                                     <Setter Property="Text" Value="{Binding validLastname.message}"/>
+                                    <Setter Property="Foreground" Value="Green"/>
+                                    <Setter Property="FontWeight" Value="Bold"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+            </StackPanel>
+
+            <StackPanel Grid.Row="2" Grid.Column="1">
+                <TextBox Text="{Binding firstname, Mode=OneWayToSource}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="2" Grid.Column="1" />
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
+                    <TextBlock.Style>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding validFirstname}" Value="{x:Null}">
+                                    <Setter Property="Text" Value="Champ obligatoire"/>
+                                    <Setter Property="Foreground" Value="Gray"/>
+                                    <Setter Property="FontStyle" Value="Italic"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding validFirstname.valid}" Value="false">
+                                    <Setter Property="Text" Value="{Binding validFirstname.message}"/>
+                                    <Setter Property="Foreground" Value="Red"/>
+                                    <Setter Property="FontWeight" Value="Bold"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding validFirstname.valid}" Value="true">
+                                    <Setter Property="Text" Value="{Binding validFirstname.message}"/>
                                     <Setter Property="Foreground" Value="Green"/>
                                     <Setter Property="FontWeight" Value="Bold"/>
                                 </DataTrigger>
@@ -121,6 +119,12 @@
                 </TextBlock>
             </StackPanel>
         </Grid>
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}"  Width="92" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
+            <StackPanel Orientation="Horizontal" Width="76">
+                <Image Source="../../Ressource/add.png" Width="30" Height="30" />
+                <TextBlock Text="Ajouter" VerticalAlignment="Center" FontWeight="Bold" />
+            </StackPanel>
+        </Button>
         <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -132,11 +136,5 @@
                 <Image Source="/PrototypeEDUCOM;component/Ressource/logoSmall.png" Height="34" VerticalAlignment="Top" Width="34" Panel.ZIndex="55"/>
             </Border>
         </Grid>
-        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}"  Width="92" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
-            <StackPanel Orientation="Horizontal" Width="76">
-                <Image Source="../../Ressource/add.png" Width="30" Height="30" />
-                <TextBlock Text="Ajouter" VerticalAlignment="Center" FontWeight="Bold" />
-            </StackPanel>
-        </Button>
     </Grid>
 </Window>
