--- a/View/LoginView.xaml
+++ b/View/LoginView.xaml
@@ -22,7 +22,8 @@
                     </Style.Triggers>
                 </Style>
             </Grid.Style>
-            <Label Content="{Binding message}" HorizontalAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" Foreground="#FFE63333" Height="33" Width="161" />
+            <StackPanel>
+            <Label Content="{Binding message}" HorizontalAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" Foreground="#FFE63333" Height="33"  />
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -36,22 +37,10 @@
                 <Label Content="Login" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="0" Margin="0,6,0,6" />
                 <Label Content="Pass" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="0" Margin="0,6,0,6"/>
 
-                <TextBox Text="{Binding login, Mode=OneWayToSource}" TextWrapping="Wrap" Grid.Row="0" Grid.Column="1"  Margin="10,8,60,8" />
-                <TextBox Text="{Binding pass, Mode=OneWayToSource}"  TextWrapping="Wrap" Grid.Row="1" Grid.Column="1" Margin="10,8,60,8" />
+                <TextBox Text="{Binding login, Mode=OneWayToSource}" Grid.Row="0" Grid.Column="1"  Margin="10,8,60,8" />
+                <TextBox Text="{Binding pass, Mode=OneWayToSource}" Grid.Row="1" Grid.Column="1" Margin="10,8,60,8" />
             </Grid>
-            
-            <!-- Button submit -->
-            <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding btnLogin}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Column="0" Width="116" Margin="98,266,98,20" >
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="../Ressource/login.png" Width="30" Height="30" />
-                    <TextBlock Text="  Connexion" VerticalAlignment="Center" FontWeight="Bold" />
-                </StackPanel>
-            </Button>
-            <TextBox HorizontalAlignment="Left" Text="{Binding login, Mode=OneWayToSource}" Height="23" Margin="108,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-            <TextBox HorizontalAlignment="Left" Text="{Binding pass, Mode=OneWayToSource}" Height="23" Margin="108,220,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-            <Label Name="login" Content="Login" HorizontalAlignment="Left" Margin="61,178,0,0" VerticalAlignment="Top"/>
-            <Label Content="Pass" HorizontalAlignment="Left" Margin="67,220,0,0" VerticalAlignment="Top"/>
-            <Label Content="{Binding message}" HorizontalAlignment="Left" Margin="67,128,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="#FFE63333" Height="33" Width="161"/>
+            </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
             <Grid.Style>
