Mise en place du médiateur

--- a/View/Customer/AddStudentView.xaml
+++ b/View/Customer/AddStudentView.xaml
@@ -36,10 +36,10 @@
             <Label Content="Parenté" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="3"/>
             <Label Content="Date de naissance" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="4"/>
 
-            <ComboBox SelectedIndex="{Binding genderIndex}" ItemsSource="{Binding genders}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
+            <ComboBox SelectedIndex="{Binding genderIndex, Mode=TwoWay}" ItemsSource="{Binding genders}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
 
             <StackPanel Grid.Row="2" Grid.Column="1">
-                <TextBox Text="{Binding firstname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="2" Grid.Column="1" />
+                <TextBox Text="{Binding firstname, Mode=OneWayToSource}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="2" Grid.Column="1" />
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
@@ -66,7 +66,7 @@
             </StackPanel>
 
             <StackPanel Grid.Row="1" Grid.Column="1">
-                <TextBox Text="{Binding lastname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="1" Grid.Column="1" />
+                <TextBox Text="{Binding lastname, Mode=OneWayToSource}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="1" Grid.Column="1" />
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
@@ -92,10 +92,10 @@
                 </TextBlock>
             </StackPanel>
 
-            <ComboBox SelectedIndex="{Binding kinshipIndex}" ItemsSource="{Binding kinships}" Grid.Row="3" Grid.Column="1" Margin="10,8,10,8" />
+            <ComboBox SelectedIndex="{Binding kinshipIndex, Mode=TwoWay}" ItemsSource="{Binding kinships}" Grid.Row="3" Grid.Column="1" Margin="10,8,10,8" />
 
             <StackPanel Grid.Column="1" Grid.Row="4">
-                <DatePicker SelectedDate="{Binding birthday}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Column="1" Grid.Row="4"/>
+                <DatePicker SelectedDate="{Binding birthday, Mode=TwoWay}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Column="1" Grid.Row="4"/>
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
