Ajout et modification des Programmes

--- a/View/Customer/EditStudentView.xaml
+++ b/View/Customer/EditStudentView.xaml
@@ -129,7 +129,7 @@
                 <Image Source="/PrototypeEDUCOM;component/Ressource/logoSmall.png" Height="34" VerticalAlignment="Top" Width="34" Panel.ZIndex="55"/>
             </Border>
         </Grid>
-        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdEdit}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
             <StackPanel Orientation="Horizontal">
                 <Image Source="../../Ressource/edit.png" Width="30" Height="30" />
                 <TextBlock Text="Modifier" Margin="10,0" VerticalAlignment="Center" FontWeight="Bold" />
