--- a/View/Organisation/ShowOrganisationUCView.xaml
+++ b/View/Organisation/ShowOrganisationUCView.xaml
@@ -27,6 +27,7 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
                 <Grid.RowDefinitions>
@@ -57,6 +58,65 @@
                 <Label Content="{Binding organisation.city}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="5"/>
                 <Label Content="{Binding organisation.country}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="6"/>
 
+            </Grid>
+            <StackPanel Grid.Column="1">
+                <Label Content="Contact Stuff" />
+            </StackPanel>
+
+            <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+
+                <StackPanel Orientation="Horizontal"  Grid.Column="0" Grid.Row="0">
+                    <Label Content="Liste des programmes" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
+                    <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAddProgram}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="../../Ressource/add.png" Width="20" Height="20" />
+                        </StackPanel>
+                    </Button>
+                </StackPanel>
+
+                <ListView Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  ItemsSource="{Binding programs}" x:Name="list">
+                    <ListView.View >
+                        <GridView>
+                            <GridView.Columns>
+                                <GridViewColumn  Header="Début" DisplayMemberBinding="{Binding begin_date, StringFormat={}{0:dd/MM/yyyy}}" />
+                                <GridViewColumn  Header="Fin" DisplayMemberBinding="{Binding end_date, StringFormat={}{0:dd/MM/yyyy}}" />
+                                <GridViewColumn  Header="Type" DisplayMemberBinding="{Binding program_types.name}" />
+                                <!-- Bouton édition d'un programme -->
+                                <GridViewColumn>
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding ElementName=list, Path=DataContext.cmdEditProgram}" CommandParameter="{Binding}">
+                                                <StackPanel Orientation="Horizontal">
+                                                    <Image Source="../../Ressource/edit.png" Width="15" Height="15" />
+                                                </StackPanel>
+                                            </Button>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <!-- Bouton suppression d'une demande -->
+                                <GridViewColumn>
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding ElementName=list, Path=DataContext.cmdDeleteProgram}" CommandParameter="{Binding}">
+                                                <StackPanel Orientation="Horizontal">
+                                                    <Image Source="../../Ressource/delete.png" Width="15" Height="15" />
+                                                </StackPanel>
+                                            </Button>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                            </GridView.Columns>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
             </Grid>
         </Grid>
     </Grid>
