--- a/View/Organisation/AddCampusView.xaml
+++ b/View/Organisation/AddCampusView.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.AddProgramView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.AddCampusView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="AddProgramView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+      Title="AddCampusView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="55" />
@@ -11,30 +11,22 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal"  Background="#FF30859A" >
             <Image   Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
-            <Label Content="Ajouter un programme" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
+            <Label Content="Ajouter un campus" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
         </StackPanel>
 
 
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-             </Grid.RowDefinitions>
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="4*"/>
             </Grid.ColumnDefinitions>
 
-            <Label Content="Type" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="0" />
-            <Label Content="Date début" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="1"/>
-            <Label Content="Date Fin" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="2"/>
+            <Label Content="Nom" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="0" />
        
-            <ComboBox SelectedIndex="{Binding typeIndex}" ItemsSource="{Binding types}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
-
-            <DatePicker SelectedDate="{Binding begin_date}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,8" Grid.Column="1" Grid.Row="1"/>
-            <DatePicker SelectedDate="{Binding end_date}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,8" Grid.Column="1" Grid.Row="2"/>
-            
+            <TextBox Text="{Binding name}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
         </Grid>
         <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}"  Width="92" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
             <StackPanel Orientation="Horizontal" Width="76">
