--- a/View/Organisation/DeleteCampusView.xaml
+++ b/View/Organisation/DeleteCampusView.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Customer.DeleteCustomerView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.DeleteCampusView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Title="DeleteCustomerView" SizeToContent="Height" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+        Title="Delete" SizeToContent="Height" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="55"/>
@@ -11,20 +11,17 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#FF30859A" >
-            <Image  Source="../../Ressource/titleAddClient.png" Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
-            <Label Content="Supprimer un client" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
+            <Image   Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
+            <Label Content="Supprimer un campus" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
         </StackPanel>
 
         <StackPanel Grid.Row="1">
             <TextBlock TextWrapping="Wrap" Text="En supprimant cet élément vous allez suppimer toutes les dépendances qui sont liées: " HorizontalAlignment="Left" Margin="10,4,4,4"/>
             <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="4">
-                <Label Content="{Binding nbrRequest}" />
-                <Label Content=" demande(s)" />
+                <Label Content="{Binding nbrProposition}" />
+                <Label Content=" proposition(s)" />
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="4">
-                <Label Content="{Binding nbrStudent}" />
-                <Label Content=" étudiant(s)" />
-            </StackPanel>
+
         </StackPanel>
 
         <Grid Grid.Row="2">
