--- a/View/Organisation/DeleteOrganisationView.xaml
+++ b/View/Organisation/DeleteOrganisationView.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.DeleteOrganisationView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Title="DeleteOrganisationView" SizeToContent="Height" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+      Title="DeleteOrganisationView" SizeToContent="Height" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="55"/>
@@ -12,15 +12,20 @@
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#FF30859A" >
             <Image   Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
-            <Label Content="Suppression d'une organisation" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
+            <Label Content="Supprimer une organisation" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
         </StackPanel>
 
         <StackPanel Grid.Row="1">
             <TextBlock TextWrapping="Wrap" Text="En supprimant cet élément vous allez suppimer toutes les dépendances qui sont liées: " HorizontalAlignment="Left" Margin="10,4,4,4"/>
             <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="4">
+                <Label Content="{Binding nbrProgram}" />
+                <Label Content=" programme(s)" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="4">
                 <Label Content="{Binding nbrContact}" />
                 <Label Content=" contact(s)" />
             </StackPanel>
+
         </StackPanel>
 
         <Grid Grid.Row="2">
