--- a/View/Organisation/EditOrganisationView.xaml
+++ b/View/Organisation/EditOrganisationView.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.AddOrganisationView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.EditOrganisationView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="AddOrganisationView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
-   <Grid>
+       Title="EditOrganisationView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="55" />
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="70"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
+
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#FF30859A" >
             <Image  Source="../../Ressource/titleAddOrganisation.png" Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
-            <Label Content="Ajouter une organisation" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
+            <Label Content="Modifier une organisation" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
         </StackPanel>
 
         <Grid Grid.Row="1">
@@ -28,7 +28,7 @@
                 </Grid.ColumnDefinitions>
                 <Label Content="Nom" HorizontalAlignment="Right" Grid.Row="0" Margin="0,6,10,6" Grid.Column="0" />
                 <StackPanel Grid.Column="1">
-                    <TextBox Text="{Binding name, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,40,8" Grid.Row="0" Grid.Column="1"/>
+                    <TextBox Text="{Binding name}" HorizontalAlignment="Stretch" Margin="10,8,40,8" Grid.Row="0" Grid.Column="1"/>
                     <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top"  Margin="10,0,0,0">
                         <TextBlock.Style>
                             <Style TargetType="{x:Type TextBlock}">
@@ -75,10 +75,10 @@
                     <Label Content="Ville" HorizontalAlignment="Right" Grid.Row="1" Margin="0,6,10,6" Grid.Column="0"/>
                     <Label Content="NPA" HorizontalAlignment="Right" Grid.Row="0"  Margin="0,6,10,6" Grid.Column="2" />
                     <Label Content="Pays" HorizontalAlignment="Right" Grid.Row="1" Margin="0,6,10,6" Grid.Column="2"/>
-                    <TextBox Text="{Binding street, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="1"/>
-                    <TextBox Text="{Binding city, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="1" Grid.Column="1"/>
-                    <TextBox Text="{Binding zip, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="3"/>
-                    <TextBox Text="{Binding country, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="1" Grid.Column="3"/>
+                    <TextBox Text="{Binding street}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="1"/>
+                    <TextBox Text="{Binding city}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="1" Grid.Column="1"/>
+                    <TextBox Text="{Binding zip}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="3"/>
+                    <TextBox Text="{Binding country}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="1" Grid.Column="3"/>
 
                 </Grid>
             </Grid>
@@ -103,18 +103,18 @@
                     <Label Content="Tél. privé" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="0" Grid.Column="0" />
                     <Label Content="Tél. pro" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="1" Grid.Column="0"/>
                     <Label Content="Email" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="0" Grid.Column="2" />
-                    <TextBox Text="{Binding phonePrivate, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="1"/>
-                    <TextBox Text="{Binding phonePro, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="1" Grid.Column="1"/>
-                    <TextBox Text="{Binding email, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="3"/>
-                 
+                    <TextBox Text="{Binding phonePrivate}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="1"/>
+                    <TextBox Text="{Binding phonePro}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="1" Grid.Column="1"/>
+                    <TextBox Text="{Binding email}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="3"/>
+
                 </Grid>
             </Grid>
         </Grid>
 
-        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}" Width="92" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
-            <StackPanel Orientation="Horizontal" Width="76">
-                <Image Source="../../Ressource/add.png" Width="30" Height="30" />
-                <TextBlock Text="Ajouter" VerticalAlignment="Center" FontWeight="Bold" />
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdEdit}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="../../Ressource/edit.png" Width="30" Height="30" />
+                <TextBlock Text="Modifier" VerticalAlignment="Center" FontWeight="Bold" Margin="6" />
             </StackPanel>
         </Button>
 
